--- a/neon.html
+++ b/neon.html
@@ -115,13 +115,13 @@
   </section>
 
 
-  <footer>
+ <footer>
     <div class="container">
       <p>&copy; 2025 Agencia Creativa Potters Arts . Todos los derechos reservados.</p>
       <div class="social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/potters.arts?igsh=ajcyOTV1aHFjZG80"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://bit.ly/WhatsAppPottersArts"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61566598381253&mibextid=wwXIfr&mibextid=wwXIfr"><i class="fab fa-whatsapp"></i></a>
       </div>
     </div>
   </footer>
